# Sturgeon_CPP

./: CMakeLists.txt  LICENSE  README.md  main.cpp  utils.cpp  utils.h
CTC_Decoder/: CTC_Decoder.cpp  CTC_Decoder.h
DataLoader/: DataLoader.cpp  DataLoader.h  DataLoader_sub_proc.cpp
Fastq_Writer/: writer.cpp  writer.h
Model/: basecall.cpp  basecall.h  model.cpp  model.h
Stitch_Result/: stitch_result.cpp  stitch_result.h
